[package]
name = "gmodds"
description = "Blazingly fast GMODDS re-implementation"
authors=["smokingplaya"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
chrono = "0.4.38"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }